--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Assets/style.css">  
-    <link rel="stylesheet" href="../Assets/projet.css"> 
+    <link rel="stylesheet" href="Assets/style.css">  
+    <link rel="stylesheet" href="Assets/projet.css"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">   
-    <title>Document</title>
+    <title>Portfolio Ahmed</title>
 </head>
 <body>
     <div>
@@ -40,7 +40,7 @@
             <hr style="margin-bottom: 110px; width: 300px; margin-left: 0px; color: #59eafd; border: solid 1.9px;">
             <main>
                 <div class="cards">
-                    <a href="#"> <div class="card">
+                    <a href="https://julien-ahmed-instagram.projets.garage404.com/"> <div class="card">
                         <div class="card__image">
                             <div class="card__image--inner"></div>
                         </div>
@@ -48,7 +48,7 @@
                              <span class="card__text--inner">Instagram</span>
                         </div></a>
                     </div>
-                    <a href="#"><div class="card">
+                    <a href="https://ahmed-semih-serhat-tpc.projets.garage404.com/"><div class="card">
                         <div class="card__image">
                             <div class="card__image--inner"></div>
                         </div>
@@ -56,7 +56,7 @@
                             <span class="card__text--inner">Combat</span>
                         </div></a>
                     </div>
-                    <a href="#"><div class="card">
+                    <a href="https://ahmed-themountain.projets.garage404.com/"><div class="card">
                         <div class="card__image">
                             <div class="card__image--inner"></div>
                         </div>
@@ -64,7 +64,7 @@
                             <span class="card__text--inner">Montain</span>
                         </div></a>
                     </div>
-                    <a href="#"><div class="card">
+                    <a href="https://ahmed-semih-serhat-pac.projets.garage404.com/"><div class="card">
                         <div class="card__image">
                             <div class="card__image--inner"></div>
                         </div>
@@ -80,13 +80,12 @@
         <h1 class="h1cont">Send me a message !</h1>
         <p class="pcont">If you're interested about my services contact me !</p>
         <div class="d-cont">
-            <button class="custom-btn btn-7"><a class="a-cv" href="../IMG_8651.jpg" download><span>Here's my CV !</span></a></button>
+            <button class="custom-btn btn-7"><a class="a-cv" href="../CV-Dev-Web.pdf" download><span>Here's my CV !</span></a></button>
             <a href="https://github.com/essiens0025" target="_blank"><img style="width: 50px; margin-left: 250px" src="../logo-github.png"></a>
             <a href="mailto:mahihenni.ahmed1@gmail.com?"><img src="../mail2.png" class="mail"></a> 
             <a href="https://www.linkedin.com/in/ahmed-mahihenni-087325206/" target="_blank"><img style="width: 50px; margin-left: 250px;"src="../linkedin.png"></a>
-            
         </div> 
     </div>
-    <script src="../proj.js"></script>
+    <script src="proj.js"></script>
 </body>
 </html>
