--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Assets/style.css">  
-    <link rel="stylesheet" href="Assets/projet.css"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">   
     <title>Portfolio Ahmed</title>
 </head>
@@ -27,7 +26,7 @@
         <div>
             <div>
         <h1 class="hpres">Presentation</h1>
-        <hr style="margin-bottom: 110px; width: 300px; margin-left: 802px; color: #59eafd; border: solid 1.9px;">
+        <hr class="hr">
         <p class="ppres">I am curently training myself at Simplon Saint-Etienne to become a Web Developer.</p>
         <p class="ppres">I've already made some Projects that I'm sure you may want to see.</p>
         <p class="ppres">If you are interested in my services, there is my CV and all my Contacts here !</p>
@@ -37,7 +36,7 @@
     <div id="My Projects">
         <div id="bodyproj">
             <h1 class="hproj">My Projects</h1>
-            <hr style="margin-bottom: 110px; width: 300px; margin-left: 0px; color: #59eafd; border: solid 1.9px;">
+            <hr class="hr">
             <main>
                 <div class="cards">
                     <a href="https://julien-ahmed-instagram.projets.garage404.com/"> <div class="card">
@@ -81,9 +80,9 @@
         <p class="pcont">If you're interested about my services contact me !</p>
         <div class="d-cont">
             <button class="custom-btn btn-7"><a class="a-cv" href="../CV-Dev-Web.pdf" download><span>Here's my CV !</span></a></button>
-            <a href="https://github.com/essiens0025" target="_blank"><img style="width: 50px; margin-left: 250px" src="../logo-github.png"></a>
+            <a href="https://github.com/essiens0025" target="_blank"><img style="width: 50px;" src="../logo-github.png"></a>
             <a href="mailto:mahihenni.ahmed1@gmail.com?"><img src="../mail2.png" class="mail"></a> 
-            <a href="https://www.linkedin.com/in/ahmed-mahihenni-087325206/" target="_blank"><img style="width: 50px; margin-left: 250px;"src="../linkedin.png"></a>
+            <a href="https://www.linkedin.com/in/ahmed-mahihenni-087325206/" target="_blank"><img style="width: 50px; "src="../linkedin.png"></a>
         </div> 
     </div>
     <script src="proj.js"></script>
